examples/ast-html/src/tests/corpus/snapshots/ast_html__tests__corpus__p_elements_without_close_tags@name.snap
---
source: src/tests/corpus/mod.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Document {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
                AstNodeId {
                    id: 5,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
                AstNodeId {
                    id: 11,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
                AstNodeId {
                    id: 15,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
                AstNodeId {
                    id: 19,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
            ],
            _range: Range {
                start_byte: 0,
                end_byte: 52,
                start_point: Point {
                    row: 0,
                    column: 0,
                },
                end_point: Point {
                    row: 4,
                    column: 13,
                },
            },
            _id: 0,
            _parent: None,
        },
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 2,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 7,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 0,
                    },
                },
                _id: 1,
                _parent: Some(
                    0,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 3,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 3,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 3,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 1,
                    end_byte: 2,
                    start_point: Point {
                        row: 0,
                        column: 1,
                    },
                    end_point: Point {
                        row: 0,
                        column: 2,
                    },
                },
                _id: 3,
                _parent: Some(
                    2,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 3,
                    end_byte: 6,
                    start_point: Point {
                        row: 0,
                        column: 3,
                    },
                    end_point: Point {
                        row: 0,
                        column: 6,
                    },
                },
                _id: 4,
                _parent: Some(
                    1,
                ),
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 8,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 9,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 7,
                    end_byte: 21,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 14,
                    },
                },
                _id: 5,
                _parent: Some(
                    0,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 7,
                    end_byte: 12,
                    start_point: Point {
                        row: 1,
                        column: 0,
                    },
                    end_point: Point {
                        row: 1,
                        column: 5,
                    },
                },
                _id: 6,
                _parent: Some(
                    5,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 8,
                    end_byte: 11,
                    start_point: Point {
                        row: 1,
                        column: 1,
                    },
                    end_point: Point {
                        row: 1,
                        column: 4,
                    },
                },
                _id: 7,
                _parent: Some(
                    6,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 12,
                    end_byte: 15,
                    start_point: Point {
                        row: 1,
                        column: 5,
                    },
                    end_point: Point {
                        row: 1,
                        column: 8,
                    },
                },
                _id: 8,
                _parent: Some(
                    5,
                ),
            },
        ),
        EndTag(
            EndTag {
                children: AstNodeId {
                    id: 10,
                    _marker: PhantomData<ast_html::generated::TagName>,
                },
                _range: Range {
                    start_byte: 15,
                    end_byte: 21,
                    start_point: Point {
                        row: 1,
                        column: 8,
                    },
                    end_point: Point {
                        row: 1,
                        column: 14,
                    },
                },
                _id: 9,
                _parent: Some(
                    5,
                ),
            },
        ),
        TagName {
            _range: Range {
                start_byte: 17,
                end_byte: 20,
                start_point: Point {
                    row: 1,
                    column: 10,
                },
                end_point: Point {
                    row: 1,
                    column: 13,
                },
            },
            _id: 10,
            _parent: Some(
                9,
            ),
        },
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 12,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 14,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 22,
                    end_byte: 31,
                    start_point: Point {
                        row: 2,
                        column: 0,
                    },
                    end_point: Point {
                        row: 3,
                        column: 0,
                    },
                },
                _id: 11,
                _parent: Some(
                    0,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 13,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 22,
                    end_byte: 25,
                    start_point: Point {
                        row: 2,
                        column: 0,
                    },
                    end_point: Point {
                        row: 2,
                        column: 3,
                    },
                },
                _id: 12,
                _parent: Some(
                    11,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 23,
                    end_byte: 24,
                    start_point: Point {
                        row: 2,
                        column: 1,
                    },
                    end_point: Point {
                        row: 2,
                        column: 2,
                    },
                },
                _id: 13,
                _parent: Some(
                    12,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 25,
                    end_byte: 30,
                    start_point: Point {
                        row: 2,
                        column: 3,
                    },
                    end_point: Point {
                        row: 2,
                        column: 8,
                    },
                },
                _id: 14,
                _parent: Some(
                    11,
                ),
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 16,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 18,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 31,
                    end_byte: 39,
                    start_point: Point {
                        row: 3,
                        column: 0,
                    },
                    end_point: Point {
                        row: 4,
                        column: 0,
                    },
                },
                _id: 15,
                _parent: Some(
                    0,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 17,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 31,
                    end_byte: 34,
                    start_point: Point {
                        row: 3,
                        column: 0,
                    },
                    end_point: Point {
                        row: 3,
                        column: 3,
                    },
                },
                _id: 16,
                _parent: Some(
                    15,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 32,
                    end_byte: 33,
                    start_point: Point {
                        row: 3,
                        column: 1,
                    },
                    end_point: Point {
                        row: 3,
                        column: 2,
                    },
                },
                _id: 17,
                _parent: Some(
                    16,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 34,
                    end_byte: 38,
                    start_point: Point {
                        row: 3,
                        column: 3,
                    },
                    end_point: Point {
                        row: 3,
                        column: 7,
                    },
                },
                _id: 18,
                _parent: Some(
                    15,
                ),
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 20,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 22,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 23,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 39,
                    end_byte: 52,
                    start_point: Point {
                        row: 4,
                        column: 0,
                    },
                    end_point: Point {
                        row: 4,
                        column: 13,
                    },
                },
                _id: 19,
                _parent: Some(
                    0,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 21,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 39,
                    end_byte: 43,
                    start_point: Point {
                        row: 4,
                        column: 0,
                    },
                    end_point: Point {
                        row: 4,
                        column: 4,
                    },
                },
                _id: 20,
                _parent: Some(
                    19,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 40,
                    end_byte: 42,
                    start_point: Point {
                        row: 4,
                        column: 1,
                    },
                    end_point: Point {
                        row: 4,
                        column: 3,
                    },
                },
                _id: 21,
                _parent: Some(
                    20,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 43,
                    end_byte: 47,
                    start_point: Point {
                        row: 4,
                        column: 4,
                    },
                    end_point: Point {
                        row: 4,
                        column: 8,
                    },
                },
                _id: 22,
                _parent: Some(
                    19,
                ),
            },
        ),
        EndTag(
            EndTag {
                children: AstNodeId {
                    id: 24,
                    _marker: PhantomData<ast_html::generated::TagName>,
                },
                _range: Range {
                    start_byte: 47,
                    end_byte: 52,
                    start_point: Point {
                        row: 4,
                        column: 8,
                    },
                    end_point: Point {
                        row: 4,
                        column: 13,
                    },
                },
                _id: 23,
                _parent: Some(
                    19,
                ),
            },
        ),
        TagName {
            _range: Range {
                start_byte: 49,
                end_byte: 51,
                start_point: Point {
                    row: 4,
                    column: 10,
                },
                end_point: Point {
                    row: 4,
                    column: 12,
                },
            },
            _id: 24,
            _parent: Some(
                23,
            ),
        },
    ],
}
